--- a/style.css
+++ b/style.css
@@ -482,7 +482,7 @@ input[type="text"]:focus {
     border-radius: 15px;
     box-shadow: 0 5px 25px rgba(0, 0, 0, 0.5);
     width: 90%;
-    max-width: 450px;
+    max-width: 500px; /* Ukuran pop-up lebih lebar */
     padding: 20px;
     transform: scale(0.95);
     opacity: 0;
